test.html -> index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>test</title>
+    <title>DevRelOMeter: Are you practicing Developer Evangelism or Advocacy?</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
