Refactor: file structure

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <script src='./config.js'></script>
     <script>
-      System.import('src/gauge');
+      System.import('src/main');
     </script>
   </body>
 </html>
