--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     
     <footer>
-      <p>Built by Phil <a href="https://twitter.com/leggetter">@leggetter</a> - <a href="http://www.leggetter.co.uk">Developer Relations &amp; Real-Time Internet Technology Consultant</a>. Get <a href="https://github.com/leggetter/devrelometer">DevRelOMeter code on GitHub</a>.
+      <p>Built by Phil <a href="https://twitter.com/leggetter">@leggetter</a> - <a href="http://www.leggetter.co.uk">Developer Relations &amp; Real-Time Internet Technology Consultant</a>. Get the <a href="https://github.com/leggetter/devrelometer">DevRelOMeter code on GitHub</a>.
     </footer>
     
     <!-- build:js -->
