adding wrapper css class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />
   </head>
-  <body>
+  <body class="devrelometer">
     <header>
       <h1>DevRelOMeter</h1>
       <p>Are you practicing - or considering practicing - Developer <strong>Evangelism</strong> or <strong>Advocacy</strong>?</p>
